--- a/cpp/enums/CMakeLists.txt
+++ b/cpp/enums/CMakeLists.txt
@@ -3,7 +3,6 @@ project(enums)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(enums enums.cpp
-        enumClass.cpp)
+add_executable(enums enums.cpp)
 add_executable(scopedEnums scopedEnums.cpp)
 add_executable(enumClass enumClass.cpp)
